--- a/index.html
+++ b/index.html
@@ -20,18 +20,22 @@
           <li><a href="#"> Contacto </a> </li>
         </ul>   
   </nav>
-  <div id="intro" class="d-flex text-center align-center column justify-center bg-light">
-      <h1 class="intro-title">
-        SOMOS ARTESANOS <br> <br> <br> DIGITALES DE CANADÁ
-      </h1>
-      <p class=" intro-subtitle space-top">
-        Sin embargo, si está presente el diseño Dictumst UX y UI.
-      </p>
+  <div id="intro" class="d-flex justify-center align-center text-center bg-light">
+    <div>
+        <h1 class="intro-title">
+          SOMOS ARTESANOS
+           <br> <br> <br>
+           DIGITALES DE CANADÁ
+        </h1>
+        <p class=" intro-subtitle space-top">
+          Sin embargo, si está presente el diseño Dictumst UX y UI.
+        </p>
+    </div>
   </div>
   <section id="services" class="space-top">
   <div class="container">
     <div class="row">
-      <div class="col-3">
+      <div class="col-md6 col-lg3">
           <div class="card text-center"> 
               <img src="img/box.png"> 
               <h3>Embalaje</h3>
@@ -40,7 +44,7 @@
               </p> 
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-md6 col-lg3">
         <div class="card text-center">  
               <img src="img/bran.png"> 
               <h3>Marca</h3>
@@ -49,7 +53,7 @@
               </p> 
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-md6 col-lg3">
         <div class="card text-center">
             <img src="img/flag.png"> 
             <h3>Logo</h3>
@@ -58,7 +62,7 @@
             </p> 
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-md6 col-lg3">
         <div class="card text-center"> 
             <img src="img/config.png"> 
             <h3>Estrategia</h3>
@@ -76,20 +80,25 @@
       Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
        El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". 
     </p>
-    <div class="space-top d-flex justify-content-sa"> <p>ALL</p> <p>WEB</p> <p>DESIGN</p> <p>NEW</p> <p>PRINT</p> </div>  
+      <h5>ALL</h5> 
+      <h5>WEB</h5> 
+      <h5>DESIGN</h5> 
+      <h5>NEW</h5> 
+      <h5>PRINT</h5> 
+    </div>  
   </div>
-  <div class="d-flex justify-center ">
-    <div class="column space-margin">
-        <div><img src="img/1.jpg"></div> <br>
-        <div><img src="img/4.jpg"></div>
+  <div class="row justify-center">
+    <div class="col-lg3 col-md4">
+        <div><img src="img/1.jpg">
+        <br> <img class="space-top" src="img/4.jpg"> </div>
     </div>
-    <div class="column space-margin">
-        <div><img src="img/2.jpg"></div> <br>
-        <div><img src="img/5.jpg"></div>
+    <div class="col-lg3 col-md4">
+        <div><img src="img/2.jpg"> <br>
+        <img class="space-top" src="img/5.jpg"></div>
       </div>
-      <div class="column space-margin">
-        <div><img src="img/3.jpg"></div> <br>
-        <div><img src="img/6.jpg"></div>
+      <div class="col-lg3 col-md4">
+        <div><img src="img/3.jpg"> <br>
+        <img class="space-top" src="img/6.jpg"></div>
       </div>
   </div>
 	<div class=" d-flex justify-center align-center space-top">
@@ -104,13 +113,13 @@
         </p>
     </div>
       <div class="row justify-center space-top"> 
-          <div class="col-4">
+          <div class="col-md4 col-lg3">
             <div class="card">
               <p class="text-grey">El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido</p>
               <p class="space-top-sm">RAKIB MIA/ DEVELOPER</p>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md4 col-lg3">
             <div class="card">
               <p class="text-grey">El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido</p>
               <p class="space-top-sm">RAKIB MIA/ DEVELOPER</p>
