--- a/index.html
+++ b/index.html
@@ -20,168 +20,171 @@
           <li><a href="#"> Contacto </a> </li>
         </ul>   
   </nav>
-  <div id="intro" class="d-flex justify-center align-center text-center bg-light">
+  <div id="intro" class="bg-light d-flex justify-center align-center text-center">
     <div>
-        <h1 class="intro-title">
-          SOMOS ARTESANOS
-           <br> <br> <br>
-           DIGITALES DE CANADÁ
-        </h1>
-        <p class=" intro-subtitle space-top">
-          Sin embargo, si está presente el diseño Dictumst UX y UI.
-        </p>
+      <div class="intro-title">
+        SOMOS ARTESANOS <br>
+        DIGITALES DE CANADÁ
+      </div>
+      <div class="intro-subtitle space-top">
+        Sin embargo, si está presente el diseño Dictumst UX y UI.
+      </div>
     </div>
   </div>
   <section id="services" class="space-top">
-  <div class="container">
-    <div class="row">
-      <div class="col-md6 col-lg3">
-          <div class="card text-center"> 
-              <img src="img/box.png"> 
-              <h3>Embalaje</h3>
-              <p class="space-top-sm ">
-                El punto de usar Lorem Ipsum es que más o menos normal más que.
-              </p> 
-            </div>
-        </div>
+    <div class="container">
+      <div class="row">
         <div class="col-md6 col-lg3">
-        <div class="card text-center">  
-              <img src="img/bran.png"> 
-              <h3>Marca</h3>
-              <p class="space-top-sm">
-                El punto de usar Lorem Ipsum es que más o menos normal más que.
-              </p> 
+          <div class="card text-center"> 
+            <img src="img/box.png"> 
+              <h3>Embalaje</h3>
+                <p class="space-top-sm ">
+                  El punto de usar Lorem Ipsum es que más o menos normal más que.
+                </p> 
           </div>
         </div>
         <div class="col-md6 col-lg3">
-        <div class="card text-center">
-            <img src="img/flag.png"> 
-            <h3>Logo</h3>
-            <p class="space-top-sm">
-              El punto de usar Lorem Ipsum es que más o menos normal más que.
-            </p> 
+          <div class="card text-center">  
+            <img src="img/bran.png"> 
+              <h3>Marca</h3>
+                <p class="space-top-sm">
+                El punto de usar Lorem Ipsum es que más o menos normal más que.
+                </p> 
+          </div>
         </div>
-      </div>
-      <div class="col-md6 col-lg3">
-        <div class="card text-center"> 
+        <div class="col-md6 col-lg3">
+          <div class="card text-center">
+            <img src="img/flag.png"> 
+              <h3>Logo</h3>
+               <p class="space-top-sm">
+                 El punto de usar Lorem Ipsum es que más o menos normal más que.
+               </p> 
+          </div>
+        </div>
+        <div class="col-md6 col-lg3">
+          <div class="card text-center"> 
             <img src="img/config.png"> 
-            <h3>Estrategia</h3>
-            <p class="space-top-sm">
-              El punto de usar Lorem Ipsum es que más o menos normal más que.
-            </p> 
+              <h3>Estrategia</h3>
+                <p class="space-top-sm">
+                  El punto de usar Lorem Ipsum es que más o menos normal más que.
+                </p> 
           </div>
         </div>
       </div>
     </div>
   </section>
-  <div id="works" class="text-center ">
+  <section id="works" class="text-center ">
    	<h2>Últimos Trabajos</h2>
-   	<p class=" space-top">
-      Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
-       El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". 
-    </p>
-      <h5>ALL</h5> 
-      <h5>WEB</h5> 
-      <h5>DESIGN</h5> 
-      <h5>NEW</h5> 
-      <h5>PRINT</h5> 
-    </div>  
-  </div>
-  <div class="row justify-center">
+      <p class=" space-top">
+        Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
+        El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". 
+      </p>
+        <h5>ALL</h5> 
+        <h5>WEB</h5> 
+        <h5>DESIGN</h5> 
+        <h5>NEW</h5> 
+        <h5>PRINT</h5>  
+  </section>
+  <section class="row justify-center">
     <div class="col-lg3 col-md4">
         <div><img src="img/1.jpg">
-        <br> <img class="space-top" src="img/4.jpg"> </div>
+        <br> <img class="space-top" src="img/4.jpg"> 
+        </div>
     </div>
     <div class="col-lg3 col-md4">
         <div><img src="img/2.jpg"> <br>
-        <img class="space-top" src="img/5.jpg"></div>
+        <img class="space-top" src="img/5.jpg">
       </div>
-      <div class="col-lg3 col-md4">
+    </div>
+    <div class="col-lg3 col-md4">
         <div><img src="img/3.jpg"> <br>
-        <img class="space-top" src="img/6.jpg"></div>
-      </div>
-  </div>
-	<div class=" d-flex justify-center align-center space-top">
-    <button class="button-lm space-top space-margin">
+        <img class="space-top" src="img/6.jpg">
+        </div>
+    </div>
+  </section>
+	<div class=" d-flex justify-center align-center">
+    <button class="button-lm">
       <h4>Leer más</h4>
     </button> 
   </div>
-    <div class="news text-center bg-light">
-      <h2>Testimonios</h2>
-        <p class=" space-top">    Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
-          El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". 
+  <section class="news text-center bg-light">
+    <h2>Testimonios</h2>
+      <p class=" space-top">Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
+            El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". 
+      </p>
+  </section>
+  <div class="row justify-center space-top"> 
+    <div class="col-md4 col-lg3">
+      <div class="card">
+        <p class="text-grey">El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido
         </p>
-    </div>
-      <div class="row justify-center space-top"> 
-          <div class="col-md4 col-lg3">
-            <div class="card">
-              <p class="text-grey">El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido</p>
-              <p class="space-top-sm">RAKIB MIA/ DEVELOPER</p>
-            </div>
-          </div>
-          <div class="col-md4 col-lg3">
-            <div class="card">
-              <p class="text-grey">El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido</p>
-              <p class="space-top-sm">RAKIB MIA/ DEVELOPER</p>
-            </div>
-          </div>
+        <p class="space-top-sm">RAKIB MIA/ DEVELOPER
+        </p>
       </div>
-    
-    <div class=" space-top  text-center news bg-light"> 
-      <h2>Ultimas Noticias</h2>
-      <p class="space-top">El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido</p>
     </div>
+    <div class="col-md4 col-lg3">
+      <div class="card">
+        <p class="text-grey">El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido
+        </p>
+        <p class="space-top-sm">RAKIB MIA/ DEVELOPER
+        </p>
+      </div>
+    </div>
+  </div>
+  <section class="news space-top  text-center bg-light"> 
+    <h2>Ultimas Noticias</h2>
+    <p class="space-top">El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido</p>
+  </section>
   <section class="container"> 
-    <div class="d-flex justify-center align-center space-top">
-        <div class="col-4"> 
+    <div class="row justify-center align-center space-top">
+        <div class="col-md4 col-lg3"> 
           <img src="img/7.jpg"> 
         </div> 
-        <div class="col-4 space-margin"> 
+        <div class="col-md4 col-lg3 space-margin"> 
               <h3>DE DÓNDE VIENE</h3> 
               <h6 class="space-top-sm">FEBRUARY 11, 2019</h6> 
               <p class="space-top-sm">Todos los generadores Lorem Ipsum en Internet tienden a repetir che predefinidos.</p>
               <h6 class="space-top-sm">Leer más</h6>
-            </div>  
-        </div>
+        </div>  
     </div>
-    <div class="d-flex justify-center align-center space-top">
-          <div class="col-4"> 
+    <div class="row justify-center align-center space-top">
+          <div class="col-md4 col-lg3"> 
               <h3>DE DÓNDE VIENE</h3> 
               <h6 class="space-top-sm">FEBRUARY 11, 2019</h6> 
-              <p class="space-top-sm">Todos los generadores Lorem Ipsum en Internet tienden a repetir che predefinidos.</p>
+              <p class="space-top-sm">Todos los generadores Lorem Ipsum en Internet tienden a repetir che predefinidos.
+              </p>
               <h6 class="space-top-sm">Leer más</h6>
           </div>  
-        <div class="col-4"> 
+        <div class="col-md4 col-lg3"> 
           <img src="img/8.jpg"> 
        </div> 
     </div>
   </section>
   <div id="footer" class=" space-top row justify-content-sa">
-      <div class="col-3"> <img src="img/logo.png" width="200" height="200">
+    <div class="col-lg3 col-md4"> <img src="img/logo.png" width="200" height="200">
       </div>
-        <div class="col-3"> <h4>SOBRE NOSOTROS</h4>
+        <div class="col-lg3 col-md4"> <h4>SOBRE NOSOTROS</h4>
           <p class="space-top-sm"> El punto de usar Lorem Ipsum es que tiene una distribución normal de letras, en lugar de usar nt aquí, conten
           </p>
-       </div>
-       <div class="col-3"> <h4>CONTACTANOS</h4>
+        </div>
+      <div class="col-lg3 col-md4"> <h4>CONTACTANOS</h4>
         <p class="space-top-sm">
           Phone : +98 698 5874 5896
           Email : Demo@Mail.Com
-          Address : Your Location Name, New Canada.</p>
-       </div>
+          Address : Your Location Name, New Canada.
+        </p>
+    </div>
   </div>
   <div id="footerbar">
     <div class="d-flex justify-content-sb align-center">
       <p>© Copyright 2020 By Brayan David
       </p>
-     <ul>
-       <li> <a href="#"> Facebook </a> </li>
-       <li> <a href="#"> Twitter </a> </li>
-       <li> <a href="#"> Instagram </a> </li>
-     </ul>
-
+      <ul>
+        <li> <a href="#"> Facebook </a> </li>
+        <li> <a href="#"> Twitter </a> </li>
+        <li> <a href="#"> Instagram </a> </li>
+      </ul>
     </div>
-
   </div>
 </body>
 </html>
