--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
       </p>
   </section>
   <div class="row justify-center space-top"> 
-    <div class="col-md4 col-lg3">
-      <div class="card">
-        <p class="text-grey">El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido
+    <div class="col-md4 ">
+      <div class="card space-margin">
+        <p>El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido
         </p>
         <p class="space-top-sm">RAKIB MIA/ DEVELOPER
         </p>
       </div>
     </div>
-    <div class="col-md4 col-lg3">
-      <div class="card">
-        <p class="text-grey">El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido
+    <div class="col-md4">
+      <div class="card space-margin">
+        <p>El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido
         </p>
         <p class="space-top-sm">RAKIB MIA/ DEVELOPER
         </p>
@@ -137,25 +137,25 @@
   </section>
   <section class="container"> 
     <div class="row justify-center align-center space-top">
-        <div class="col-md4 col-lg3"> 
+        <div class="col-md4"> 
           <img src="img/7.jpg"> 
         </div> 
-        <div class="col-md4 col-lg3 space-margin"> 
+        <div class="col-md4 space-margin"> 
               <h3>DE DÓNDE VIENE</h3> 
               <h6 class="space-top-sm">FEBRUARY 11, 2019</h6> 
               <p class="space-top-sm">Todos los generadores Lorem Ipsum en Internet tienden a repetir che predefinidos.</p>
-              <h6 class="space-top-sm">Leer más</h6>
+              <button class="space-top-sm button-af"><h5>Leer más</h5></button>
         </div>  
     </div>
     <div class="row justify-center align-center space-top">
-          <div class="col-md4 col-lg3"> 
+          <div class="col-md4 space-margin"> 
               <h3>DE DÓNDE VIENE</h3> 
               <h6 class="space-top-sm">FEBRUARY 11, 2019</h6> 
               <p class="space-top-sm">Todos los generadores Lorem Ipsum en Internet tienden a repetir che predefinidos.
               </p>
-              <h6 class="space-top-sm">Leer más</h6>
+              <button class="space-top-sm  button-af"><h5>Leer más</h5></button>
           </div>  
-        <div class="col-md4 col-lg3"> 
+        <div class="col-md4"> 
           <img src="img/8.jpg"> 
        </div> 
     </div>
