--- a/index.html
+++ b/index.html
@@ -160,19 +160,22 @@
        </div> 
     </div>
   </section>
-  <div id="footer" class=" space-top row justify-content-sa">
+  <div id="footer" class="row justify-content-sa align-center">
     <div class="col-lg3 col-md4"> <img src="img/logo.png" width="200" height="200">
-      </div>
-        <div class="col-lg3 col-md4"> <h4>SOBRE NOSOTROS</h4>
-          <p class="space-top-sm"> El punto de usar Lorem Ipsum es que tiene una distribución normal de letras, en lugar de usar nt aquí, conten
-          </p>
-        </div>
-      <div class="col-lg3 col-md4"> <h4>CONTACTANOS</h4>
+    </div>
+    <div class="col-lg3 col-md4"> 
+        <h4>SOBRE NOSOTROS</h4>
         <p class="space-top-sm">
-          Phone : +98 698 5874 5896
-          Email : Demo@Mail.Com
-          Address : Your Location Name, New Canada.
+        El punto de usar Lorem Ipsum es que tiene una distribución normal de letras, contenido aqui.
         </p>
+    </div>
+    <div class="col-lg3 col-md4"> 
+      <h4>CONTACTANOS</h4>
+      <p class="space-top-sm">
+        Phone : +98 698 5874 5896
+        Email : Demo@Mail.Com
+        Address : Your Location Name, New Canada.
+      </p>
     </div>
   </div>
   <div id="footerbar">
