--- a/index.html
+++ b/index.html
@@ -14,8 +14,22 @@
       <a href="#"> <img src="img/logo.png" alt="mi logo" width="150" height="150"> </a>
         <ul>
           <li><a href="#"> Inicio </a> </li>
-          <li><a href="#"> Portafolio </a> </li>
-          <li><a href="#"> Sitios </a> </li>
+          <li><a href="#"> Portafolio </a> 
+            <ul>
+              <li><a href="#">Carteras</a></li>
+              <li><a href="#">Zapatos</a></li>
+              <li><a href="#">Artesanias</a></li>
+              <li><a href="#">Ecológico</a></li>
+            </ul>
+          </li>
+          <li><a href="#"> Sitios </a> 
+            <ul>
+              <li><a href="#">Redes</a></li>
+              <li><a href="#">Diseños</a></li>
+              <li><a href="#">Imagenes</a></li>
+              <li><a href="#">Videos</a></li>
+            </ul>
+          </li>
           <li><a href="#"> Blog </a> </li>
           <li><a href="#"> Contacto </a> </li>
         </ul>   
