--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
     <h2>Ultimas Noticias</h2>
     <p class="space-top">El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de letras, en lugar de usar 'Contenido aquí, contenido</p>
   </section>
-  <section class="container"> 
-    <div class="row justify-center align-center space-top">
+  <section id="design" class="container"> 
+    <div class="row justify-center align-center">
         <div class="col-md4"> 
           <img src="img/7.jpg"> 
         </div> 
